# Terminal-Chess

./: .gitignore  Board.h  BoardFactory.h  BoardFactory.hpp  CMakeLists.txt  ClassicBoardFactory.h  ClassicBoardFactory.hpp  ClassicBoardFactory_test.hpp  HoardBoardFactory.h  HoardBoardFactory.hpp  HoardBoardFactory_test.hpp  README.md  bishop_test.hpp  board.cpp  board.hpp  game.cpp  knight_test.hpp  main.cpp  queen_test.hpp  rook_test.hpp  test.cpp  tests.cpp
movement/: DiagonalMovement.hpp  HorizontalMovement.hpp  LMovement.hpp  MovementBehavior.cpp  MovementBehavior.hpp  PawnDiagonal.hpp  SingleForward.hpp  VerticalMovement.hpp  VicinityMovement.hpp
pieces/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  piece.cpp  piece.hpp  queen.hpp  rook.hpp
tests/: ClassicBoardFactory_test.hpp  HoardBoardFactory_test.hpp  bishop_test.hpp  board_test.hpp  knight_test.hpp  movement_test.hpp  piece_test.hpp  queen_test.hpp  rook_test.hpp  test.cpp
